Change java style to 11
Signed-off-by: Heng Qian <qianheng@amazon.com>